language/move-lang/tests/move_check/translated_ir_tests/borrow_tests/borrow_global_acquires_invalid_3.exp
error: 

   ┌── tests/move_check/translated_ir_tests/borrow_tests/borrow_global_acquires_invalid_3.move:8:17 ───
   │
 8 │         let y = get_v(x);
   │                 -------- It is still being mutably borrowed by this reference
 9 │         acquires_t1();
   │         ^^^^^^^^^^^^^ Invalid acquiring of resource 'T1'
   │

error: 

    ┌── tests/move_check/translated_ir_tests/borrow_tests/borrow_global_acquires_invalid_3.move:16:17 ───
    │
 16 │         let y = get_v(x);
    │                 -------- It is still being mutably borrowed by this reference
 17 │         acquires_t2();
 18 │         acquires_t1();
    │         ^^^^^^^^^^^^^ Invalid acquiring of resource 'T1'
    │

error: 

    ┌── tests/move_check/translated_ir_tests/borrow_tests/borrow_global_acquires_invalid_3.move:24:17 ───
    │
 24 │         let y = get_v(x);
    │                 -------- It is still being mutably borrowed by this reference
 25 │         acquires_t1();
    │         ^^^^^^^^^^^^^ Invalid acquiring of resource 'T1'
    │

